--- a/轮播练习/轮播.css
+++ b/轮播练习/轮播.css
@@ -8,25 +8,13 @@
 .images{
   display:flex;
   align-items:flex-start;
-  
   position: relative;
+  transition:all 1s;
 }
 .images>img{
-  position: absolute;
-  transition:all .3s;
   top:0;
+  width:100%; 
 }
-
-
-.current{
-  transform:translateX(0);
-  z-index:1;
-}
-.leave{
-  transform:translatex(-600px);
-  z-index:0;
-}
-.enter{
-  transform: translateX(600px);
-  z-index:0;
+.buttonwrapper{
+  text-align: center;
 }
