--- a/轮播练习/轮播.css
+++ b/轮播练习/轮播.css
@@ -9,7 +9,7 @@
   display:flex;
   align-items:flex-start;
   position: relative;
-  transition:all 1s;
+  transition:all .5s;
 }
 .images>img{
   top:0;
